--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       <div class="spinner"><img src="client/images/spiffygif_46x46.gif"></div>
       <div id="rooms">
         Room:
-        <select></select>
+        <select id = "roomSelector"></select>
+        <input type = "text" name="addRoomName" id="addRoomName"/>
         <button>Add Room</button>
       </div>
       <form action="#" id="send" method="post">
@@ -45,7 +46,6 @@
     <script src="client/scripts/roomsView.js"></script>
     <script src="client/scripts/messageView.js"></script>
     <script src="client/scripts/messagesView.js"></script>
-    <script src="client/scripts/submitMessage.js"></script>
     <script src="client/scripts/app.js"></script>
     <script>
       $(() => App.initialize());
