Completed adding room functionality.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         Room:
         <select id = "roomSelector"></select>
         <input type = "text" name="addRoomName" id="addRoomName"/>
-        <button>Add Room</button>
+        <button name = "addRoom" id = "addRoom">Add Room</button>
       </div>
       <form action="#" id="send" method="post">
         <input type="text" name="message" id="message"/>
